# palg2

./: .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  nntransform  numberLib  numberLib.cbp
.cmake/api/v1/reply/: cache-v2-61933f7f396e656e550b.json  cmakeFiles-v1-bf5cb4513ab2843f7ba0.json  codemodel-v2-139146738aedecd84d6b.json  directory-ext.bulk-9ccaf20057bea3e02a92.json  directory-ext.bulk.bin.mpi-43cf49e31cb2f52bc39d.json  directory-ext.bulk.bin.thread-f50050850e262012364e.json  index-2022-01-05T12-23-11-0364.json  target-mpi-5c1750c7616626504c56.json  target-mpi_benchmark-1e43cec685de6e92e2b5.json  target-mpi_cannon-7ec455907a6dff116367.json  target-mpi_communication-bc51ed89c1089937b6c2.json  target-mpi_dot_product-85991fb125a7d76019d3.json  target-mpi_hello-5ab52ac8ff4fa7e9c05c.json  target-mpi_hello_mpi-2ddf2ac8a35bc3acf296.json  target-mpi_messaging-49d1abdb0987fe7c150f.json  target-mpi_partitioning-a2e8bf5ce1bf6219bf49.json  target-mpi_psc-c32ebc5d2b32e33ae053.json  target-mpi_unittests-c94321077f2e540b67b2.json  target-mpi_word_count-8178310aa2ce4a5f5796.json  target-nntransform-791f8ae1122d72d0cc2b.json  target-numberLib-af95deb382f47980556d.json  target-thread-093aac31d3198b927ab5.json  target-thread_benchmark-ca18f220260cb3d6324b.json  target-thread_cannon-2c7d3e3d0e057b7a18e8.json  target-thread_communication-e3454bd48009d16cb3c8.json  target-thread_densematrix_sharedmemory-69cab2f35cb87aaad1f7.json  (+9 more)
ext/: CMakeCache.txt  CMakeLists.txt  temp.cpp
includes/: fieldArithmetic.h
src/: fieldArithmetic.cpp
